--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,4 @@ tracing = "0.1"
 
 # Dependencies enabled by feature "file-system-data-source".
 atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git", tag = "0.1.3", optional = true }
+unix-time = "0.1.5"
