--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer.git", tag = "1.4.1", features = [
     "logging-utils",
 ] }
-async-lock = "0.4"
+async-lock = "2.8"
 async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
 async-trait = "0.1"
 bincode = "1.3"
@@ -23,6 +23,9 @@ hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.5
 hotshot-signature-key = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.5" }
 hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.5" }
 hotshot-utils = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.5" }
+hotshot-task = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.5" }
+hotshot-task-impls = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.5" }
+
 itertools = "0.12"
 prometheus = "0.13"
 serde = { version = "1.0", features = ["derive"] }
