--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = 
 hotshot-utils = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.5" }
 hotshot-task = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.5" }
 hotshot-task-impls = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.5" }
-
+tokio-stream = { version = "0.1.14" }
 itertools = "0.12"
 prometheus = "0.13"
 serde = { version = "1.0", features = ["derive"] }
@@ -34,7 +34,7 @@ tide-disco = { git = "https://github.com/EspressoSystems/tide-disco.git", tag = 
 time = "0.3"
 toml = "0.8"
 tracing = "0.1"
-
+tokio = { version = "1"}
 # Dependencies enabled by feature "file-system-data-source".
 atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git", tag = "0.1.3", optional = true }
 unix-time = "0.1.5"
