--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,9 @@ edition = "2021"
 # async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer.git", tag = "1.4.1", features = [
 #     "logging-utils",
 # ] }
-async-compatibility-layer = { path="../async-compatibility-layer", features = [
-    "logging-utils",
-] }
+# async-compatibility-layer = { path="../async-compatibility-layer", features = [
+#     "logging-utils",
+# ] }
 async-lock = "2.8"
 async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
 async-trait = "0.1"
@@ -41,3 +41,4 @@ tokio = { version = "1"}
 # Dependencies enabled by feature "file-system-data-source".
 atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git", tag = "0.1.3", optional = true }
 unix-time = "0.1.5"
+async-broadcast = "0.6.0"
