--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,12 +22,13 @@ derivative = "2.2"
 derive_more = "0.99"
 either = "1.8"
 futures = "0.3"
-hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.5" }
-hotshot-signature-key = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.5" }
-hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.5" }
-hotshot-utils = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.5" }
-hotshot-task = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.5" }
-hotshot-task-impls = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.5" }
+hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "main" }
+#hotshot-signature-key = { git = "https://github.com/EspressoSystems/HotShot.git", branch="main"}
+hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "main" }
+hotshot-utils = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "main" }
+hotshot-task = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "main" }
+hotshot-task-impls = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "main" }
+hotshot-testing = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "main" }
 tokio-stream = { version = "0.1.14" }
 itertools = "0.12"
 prometheus = "0.13"
@@ -42,3 +43,4 @@ tokio = { version = "1"}
 atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git", tag = "0.1.3", optional = true }
 unix-time = "0.1.5"
 async-broadcast = "0.6.0"
+sha2 = "0.10"
