--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,3 +44,4 @@ atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git", tag
 unix-time = "0.1.5"
 async-broadcast = "0.6.0"
 sha2 = "0.10"
+jf-primitives = { git = "https://github.com/EspressoSystems/jellyfish" }
