--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,3 +45,5 @@ unix-time = "0.1.5"
 async-broadcast = "0.6.0"
 sha2 = "0.10"
 jf-primitives = { git = "https://github.com/EspressoSystems/jellyfish" }
+
+builder-api = {git = "https://github.com/EspressoSystems/hs-builder-api", branch="main"}
