--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,3 +49,4 @@ jf-primitives = { git = "https://github.com/EspressoSystems/jellyfish" }
 #hs-builder-api = {git = "https://github.com/EspressoSystems/hs-builder-api", branch="main"}
 hs-builder-api = {path="../hs-builder-api"}
 tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64", tag = "0.3.4" }
+futures-lite = "2.2.0"
