--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ tide-disco = { git = "https://github.com/EspressoSystems/tide-disco.git", tag = 
 time = "0.3"
 toml = "0.8"
 tracing = "0.1"
-tokio = { version = "1"}
+tokio = { version = "1" }
 # Dependencies enabled by feature "file-system-data-source".
 atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git", tag = "0.1.3", optional = true }
 unix-time = "0.1.5"
@@ -46,7 +46,6 @@ async-broadcast = "0.6.0"
 sha2 = "0.10"
 #jf-primitives = { git = "https://github.com/EspressoSystems/jellyfish" }
 
-hs-builder-api = {git = "https://github.com/EspressoSystems/hs-builder-api", branch="builder_specific_information"}
-#hs-builder-api = {path="../hs-builder-api"}
+hs-builder-api = { git = "https://github.com/EspressoSystems/hs-builder-api", branch = "main" }
 tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64", tag = "0.3.4" }
 futures-lite = "2.2.0"
