--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hs-builder-api"
+name = "hs-builder-core"
 version = "0.1.0"
 edition = "2021"
 
@@ -20,9 +20,11 @@ hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.1
 hotshot-task = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.13" }
 hotshot-task-impls = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.13" }
 hotshot-testing = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.13" }
+hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.13" }
 hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.13" }
 hotshot-utils = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.13" }
 hs-builder-api = { git = "https://github.com/EspressoSystems/hs-builder-api", branch = "main" }
 sha2 = "0.10"
+serde = { version = "1.0", features = ["derive"] }
 tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64", tag = "0.3.4" }
 tracing = "0.1"
