--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,8 +23,7 @@ hotshot-testing = { git = "https://github.com/EspressoSystems/HotShot.git", tag 
 hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.14" }
 hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.14" }
 hotshot-utils = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.14" }
-#hs-builder-api = { git = "https://github.com/EspressoSystems/hs-builder-api", branch = "main" }
-hs-builder-api = { git = "https://github.com/EspressoSystems/hs-builder-api", branch = "hg/api_fields_change" }
+hs-builder-api = { git = "https://github.com/EspressoSystems/hs-builder-api", branch = "main" }
 sha2 = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 tide-disco = { git = "https://github.com/EspressoSystems/tide-disco", tag = "v0.4.6" }
