--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,12 +16,12 @@ async-trait = "0.1"
 clap = { version = "4.4", features = ["derive", "env"] }
 commit = { git = "https://github.com/EspressoSystems/commit.git" }
 futures = "0.3"
-hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.21" }
-hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.21" }
-hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.21" }
-hs-builder-api = { git = "https://github.com/EspressoSystems/hs-builder-api", branch = "main" }
+hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "adding_vbs_support" }
+hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "adding_vbs_support" }
+hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "adding_vbs_support" }
+hs-builder-api = { git = "https://github.com/EspressoSystems/hs-builder-api", branch = "adding_vbs_support" }
 sha2 = "0.10"
 serde = { version = "1.0", features = ["derive"] }
-tide-disco = { git = "https://github.com/EspressoSystems/tide-disco", tag = "v0.4.6" }
+tide-disco = { git = "https://github.com/EspressoSystems/tide-disco", tag = "v0.4.7" }
 tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64", tag = "0.3.4" }
 tracing = "0.1"
