--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,11 @@ async-trait = "0.1"
 clap = { version = "4.4", features = ["derive", "env"] }
 commit = { git = "https://github.com/EspressoSystems/commit.git" }
 futures = "0.3"
-hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.21" }
-hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.21" }
-hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.21" }
-hs-builder-api = { git = "https://github.com/EspressoSystems/hs-builder-api", branch = "main" }
+hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.25" }
+hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.25" }
+hotshot-types = { git = "https://github.com/EspressoSystems/hotshot-types", tag = "0.1.4" }
+#hs-builder-api = { git = "https://github.com/EspressoSystems/hs-builder-api", tag = "0.1.1" }
+hs-builder-api = { path = "../hs-builder-api" }
 sha2 = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 tide-disco = { git = "https://github.com/EspressoSystems/tide-disco", tag = "v0.4.6" }
