--- a/.github/workflows/debug_build.yml
+++ b/.github/workflows/debug_build.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Install Protoc
         uses: arduino/setup-protoc@v2
 
+      - name: Install capnproto
+        uses: ./.github/actions/install-capnp
+
       - uses: dtolnay/rust-toolchain@stable
 
       - uses: styfle/cancel-workflow-action@0.12.0
