--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -41,10 +41,11 @@ jobs:
         uses: arduino/setup-protoc@v2
 
       # Will this work?
-      # - name: Install Cap'n Proto
-      #   run: |
-      #     curl https://capnproto.org/capnproto-c++-win32-1.0.2.zip -o capnproto.zip
-      #     7z.exe e capnproto.zip *.exe
+      - name: Install Cap'n Proto
+        run: |
+          curl https://capnproto.org/capnproto-c++-win32-1.0.2.zip -o capnproto.zip
+          7z.exe e capnproto.zip *.exe
+          echo "{path}" >> $GITHUB_PATH
 
       - name: Checkout Repository
         uses: actions/checkout@v4
