--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -46,6 +46,7 @@ jobs:
           curl https://capnproto.org/capnproto-c++-win32-1.0.2.zip -o capnproto.zip
           7z.exe e capnproto.zip -r *.exe -o${{github.workspace}}\\capnproto
           Write-Output "Unpacking capnp.exe to ${{github.workspace}}\\capnproto\\"
+          Get-ChildItem -Path ${{github.workspace}}\\capnproto\\
           echo "${{github.workspace}}\\capnproto" | Out-File -Append -FilePath $env:GITHUB_PATH -Encoding utf8
 
       - name: Checkout Repository
@@ -56,7 +57,8 @@ jobs:
 
       - name: Build
         run: |
-          capnp.exe --version
+          Get-Command capnp -All
+          capnp --version
           cargo build --workspace --release
 
       - name: Test
