--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,4 @@ serde = { version = "1.0", features = ["derive"] }
 tide-disco = { git = "https://github.com/EspressoSystems/tide-disco", tag = "v0.4.6" }
 tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64", tag = "0.3.4" }
 tracing = "0.1"
+snafu = "0.8"
