--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
-name = "hs-builder-core"
+name = "hotshot-builder-core"
 version = "0.1.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+futures = "0.3"
 async-broadcast = "0.7.0"
 async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer.git", tag = "1.4.1", features = [
     "logging-utils",
@@ -13,17 +14,18 @@ async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-co
 async-lock = "2.8"
 async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
 async-trait = "0.1"
+derivative = "2.2"
 clap = { version = "4.4", features = ["derive", "env"] }
 commit = { git = "https://github.com/EspressoSystems/commit.git" }
-futures = "0.3"
-hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.25" }
-hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.25" }
-hotshot-types = { git = "https://github.com/EspressoSystems/hotshot-types", tag = "0.1.4" }
-#hs-builder-api = { git = "https://github.com/EspressoSystems/hs-builder-api", tag = "0.1.1" }
-hs-builder-api = { path = "../hs-builder-api" }
+hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.28" }
+hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.28" }
+hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.28" }
 sha2 = "0.10"
 serde = { version = "1.0", features = ["derive"] }
-tide-disco = { git = "https://github.com/EspressoSystems/tide-disco", tag = "v0.4.6" }
+tide-disco = { git = "https://github.com/EspressoSystems/tide-disco", tag = "v0.5.0" }
 tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64", tag = "0.3.4" }
 tracing = "0.1"
 snafu = "0.8"
+
+[dev-dependencies]
+hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.28" }
