--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,15 +17,22 @@ async-trait = "0.1"
 derivative = "2.2"
 clap = { version = "4.4", features = ["derive", "env"] }
 commit = { git = "https://github.com/EspressoSystems/commit.git" }
+#hotshot = { git = "https://github.com/EspressoSystems/hotshot", branch = "hg/modify_builder_submit_api" }
 hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.28" }
+#hotshot-types = { git = "https://github.com/EspressoSystems/hotshot", branch = "hg/modify_builder_submit_api" }
 hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.28" }
 hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.28" }
+#hotshot-builder-api = { git = "https://github.com/EspressoSystems/hotshot", branch = "hg/modify_builder_submit_api" }
 sha2 = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 tide-disco = { git = "https://github.com/EspressoSystems/tide-disco", tag = "v0.5.0" }
+surf-disco = { git = "https://github.com/EspressoSystems/surf-disco", tag = "v0.5.0" }
 tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64", tag = "0.3.4" }
 tracing = "0.1"
 snafu = "0.8"
+hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", tag = "0.1.0" }
+versioned-binary-serialization = { git = "https://github.com/EspressoSystems/versioned-binary-serialization.git", tag = "0.1.2" }
 
 [dev-dependencies]
 hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.28" }
+#hotshot-example-types = { git = "https://github.com/EspressoSystems/hotshot", branch = "hg/modify_builder_submit_api" }
