--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-snafu = "0.8"
-tracing = "0.1"
-futures = "0.3"
 async-broadcast = "0.7.0"
-async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer.git", tag = "1.4.2", features = [
+async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer.git", tag = "1.4.1", features = [
     "logging-utils",
 ] }
 async-lock = "2.8"
@@ -18,16 +15,20 @@ async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
 async-trait = "0.1"
 clap = { version = "4.4", features = ["derive", "env"] }
 commit = { git = "https://github.com/EspressoSystems/commit.git" }
-hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.28" }
-hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.28" }
-hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.28" }
-hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", tag = "0.1.1" }
+futures = "0.3"
+hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.32" }
+hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.32" }
+hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.32" }
+#hotshot-events-service = { path = "../hotshot-events-service" }
+hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", branch = "update_hotshot" }
 sha2 = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64", tag = "0.3.4" }
 surf-disco = { git = "https://github.com/EspressoSystems/surf-disco", tag = "v0.5.0" }
+snafu = "0.8"
 tide-disco = { git = "https://github.com/EspressoSystems/tide-disco", tag = "v0.5.0" }
+tracing = "0.1"
 versioned-binary-serialization = { git = "https://github.com/EspressoSystems/versioned-binary-serialization.git", tag = "0.1.2" }
 
 [dev-dependencies]
-hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.28" }
+hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.32" }
