--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,7 @@ futures = "0.3"
 hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.32" }
 hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.32" }
 hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.32" }
-#hotshot-events-service = { path = "../hotshot-events-service" }
-hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", branch = "update_hotshot" }
+hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", tag = "0.1.1" }
 sha2 = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64", tag = "0.3.4" }
