--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,11 @@ async-trait = "0.1"
 clap = { version = "4.4", features = ["derive", "env"] }
 committable = "0.2"
 futures = "0.3"
-hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "hg/validate_signature" }
-hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "hg/validate_signature" }
+hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "main" }
+hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "main" }
 #hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", branch = "main" }
 hotshot-events-service = { path = "../hotshot-events-service" }
-hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "hg/validate_signature" }
+hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "main" }
 serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.10"
 snafu = "0.8"
@@ -30,4 +30,4 @@ tracing = "0.1"
 vbs = "0.1"
 
 [dev-dependencies]
-hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "hg/validate_signature" }
+hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "main" }
