--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,7 @@ committable = "0.2"
 futures = "0.3"
 hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "nfy/builder_commitment_support" }
 hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "nfy/builder_commitment_support" }
-#hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", branch = "main" }
-hotshot-events-service = { path = "../hotshot-events-service" }
+hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", branch = "hg/test_builder_commitment" }
 hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "nfy/builder_commitment_support" }
 serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.10"
