--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,6 @@ version = "0.1.12"
 edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[patch."https://github.com/EspressoSystems/hotshot-events-service"]
-hotshot-events-service = { path = "../hotshot-events-service" }
-
 [dependencies]
 async-broadcast = "0.7.0"
 async-compatibility-layer = { version = "1.1", default-features = false, features = [
@@ -20,7 +17,7 @@ committable = "0.2"
 futures = "0.3"
 hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.44" }
 hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.44" }
-hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", tag = "0.1.13" }
+hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", branch = "main" }
 hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.44" }
 serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.10"
