update to be merged to the other branch

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,10 @@ async-trait = "0.1"
 clap = { version = "4.4", features = ["derive", "env"] }
 committable = "0.2"
 futures = "0.3"
-hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "nfy/builder-batched-txn-submit" }
-hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "nfy/builder-batched-txn-submit" }
-hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", branch = "nfy/builder-batched-txn-submit" }
-hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "nfy/builder-batched-txn-submit" }
+hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.47" }
+hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.47" }
+hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", tag = "0.1.17" }
+hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.47" }
 serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.10"
 snafu = "0.8"
@@ -29,4 +29,4 @@ tracing = "0.1"
 vbs = "0.1"
 
 [dev-dependencies]
-hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "nfy/builder-batched-txn-submit" }
+hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.47" }
