--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,10 @@ clap = { version = "4.4", features = ["derive", "env"] }
 committable = "0.2"
 derivative = "2.2"
 futures = "0.3"
-hotshot = { git = "https://github.com/EspressoSystems/hotshot", branch = "tbro/instance_state-by-ref" }
-hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "tbro/instance_state-by-ref" }
+hotshot = { git = "https://github.com/EspressoSystems/hotshot", rev = "6d293ae9b" }
+hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", rev = "6d293ae9b" }
 hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", branch = "tbro/update-hotshot" }
-hotshot-types = { git = "https://github.com/EspressoSystems/hotshot", branch = "tbro/instance_state-by-ref" }
+hotshot-types = { git = "https://github.com/EspressoSystems/hotshot", rev = "6d293ae9b" }
 serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.10"
 snafu = "0.8"
