--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,10 @@ clap = { version = "4.4", features = ["derive", "env"] }
 committable = "0.2"
 derivative = "2.2"
 futures = "0.3"
-hotshot = { git = "https://github.com/EspressoSystems/hotshot", rev = "6d293ae9b" }
-hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", rev = "6d293ae9b" }
+hotshot = { git = "https://github.com/EspressoSystems/hotshot", tag = "0.5.49" }
+hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.49" }
 hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", branch = "tbro/update-hotshot" }
-hotshot-types = { git = "https://github.com/EspressoSystems/hotshot", rev = "6d293ae9b" }
+hotshot-types = { git = "https://github.com/EspressoSystems/hotshot", tag = "0.5.49" }
 serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.10"
 snafu = "0.8"
@@ -30,4 +30,4 @@ tracing = "0.1"
 vbs = "0.1"
 
 [dev-dependencies]
-hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.48" }
+hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.49" }
